--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     // Local image (place your file here):
     // Put your photo in a folder named "images" next to this index.html
     // Rename the file to remove spaces, e.g. "duck-meme.jpg"
-    const firstImg = "Images/duck.jpg";
+    const firstImg = "https://media1.tenor.com/m/ybKkXp02J2QAAAAd/uwu-owo.gif";
     const secondImg = "https://media.tenor.com/f1xnRxTRxLAAAAAj/bears-with-kisses-bg.gif";
 
     // State
